<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg_filled"
        android:gravity="center"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="@dimen/screen_outer_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="@dimen/screen_outer_padding"
            android:text="@string/call_911" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/call_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/screen_outer_padding"
                android:text="@string/cancel_str"
                android:textAllCaps="true"
                android:textColor="@color/pink"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/call_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/screen_outer_padding"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/pink"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
