<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/pipe" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_contact_help"
        style="@style/SignUpLayoutStyle.heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contact_details" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_phone"
            style="@style/SignUpLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/signup_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_emailadress"
            style="@style/SignUpLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_input_layout_phone"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/signup_input_layout_emailaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_residential_help"
        style="@style/SignUpLayoutStyle.heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/residential_address" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_address"
            style="@style/SignUpLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/signup_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_pincode"
            style="@style/SignUpLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_input_layout_address"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/signup_input_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_layout_city"
            style="@style/SignUpLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_input_layout_pincode"
            android:layout_centerHorizontal="true"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/signup_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dob_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</LinearLayout>