<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg_filled"
        android:gravity="center"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="@dimen/screen_outer_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/screen_outer_padding">


            <ImageView
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/call" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/widgets_inner_padding"
                android:text="@string/confirm_call"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/widgets_inner_padding"
            android:paddingRight="@dimen/widgets_inner_padding"
            android:paddingTop="@dimen/screen_outer_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel_str"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel_str"
                android:textAllCaps="true"
                android:textColor="@color/pink" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/pink"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
